...
      "isCommentAutoGenerated" : true
    },
    "Deleting scan…" : {
      "comment" : "A message displayed while a scan is being deleted.",
      "isCommentAutoGenerated" : true
    },
    "home.newScan" : {
      "comment" : "A button that allows the user to start a new room scan.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Delete Project?"
          }
        }
      }
    },
    "projects.detail.addScan" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Scan"
...
            "state" : "translated",
            "value" : "System Readiness"
          }
        }
      }
    },
    "scancheck.startScan" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Scan"
...
